# python-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGES_COMPLETE.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  CORRECTION_TY.md  DOCUMENTATION_UPDATE.md  FOLLOW_UP.md  Makefile  README.md  REST_DOCSTRINGS.md  SETUP_SUMMARY.md  TEMPLATE_USAGE.md  UPDATES_2025-12-18.md  pyproject.toml  setup_template.sh
.copilot/: README.md  architecture.md  project-overview.md  quick-reference.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  SETUP_SUMMARY.md  TEMPLATE_USAGE.md  template-usage.md  type-checking.md  versioning.md
docs/changes/: DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_UPDATE.md  FINAL_CHANGES.md  SETUP_SCRIPT_REMOVAL.md  UPDATES_2025-12-18.md
src/template/: __init__.py  example.py
test/: test_example.py  test_example_module.py
