[project]
name = "template"
version = "0.1.0"
description = "A template Python project"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["template", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.8.0,<1.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "safety>=3.0.0,<4.0.0",
    "bandit>=1.8.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "commitizen>=4.0.0,<5.0.0",
    "ty>=0.0.4,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/template"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=template",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "test"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",  # assert allowed in tests
    "ARG",   # unused arguments ok in tests
    "PLR2004",  # magic values ok in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["test", ".venv", "build", "dist"]
skips = ["B101"]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/test/**/*.py"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/template/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true

[tool.pydocstyle]
convention = "pep257"
add-ignore = ["D203", "D213"]
match = "(?!test_).*\\.py"
match-dir = "^(?!(\\.venv|test|__pycache__|build|dist)).*"

[tool.ruff.lint.pydocstyle]
convention = "pep257"
